force-app/main/default/objects/Walk_In_Centre__c/Walk_In_Centre__c.object-meta.xml
<CustomObject>
    <label>Walk-In (Centre)</label>
    <nameField>
        <displayFormat>WIN-{0000}</displayFormat>
        <label>Walk-In (Centre ) Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Walk-In (Centre )</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>