force-app/main/default/objects/Walk_In_Centre__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre</label>
    <referenceTo>Centre__c</referenceTo>
    <relationshipName>Walk_In_Center</relationshipName>
    <type>Lookup</type>
</CustomField>