force-app/main/default/objects/Walk_In_Centre__c/fields/Counselor_Email__c.field-meta.xml
<CustomField>
    <fullName>Counselor_Email__c</fullName>
    <label>Counselor Email</label>
    <type>Email</type>
</CustomField>