force-app/main/default/objects/Walk_In_Centre__c/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Walk_In_Center</relationshipName>
    <type>Lookup</type>
</CustomField>